@@ -1,6 +1,5 @@
 package fr.inra.oresing.workflow.cascade.history;
 
-import fr.inra.oresing.workflow.cascade.StoreAllPathSink;
 import fr.inrae.ore.cascade.core.monitoring.WorkflowEventBus;
 import fr.inrae.ore.cascade.model.listener.WorkflowEvents;
 import fr.inrae.ore.cascade.model.listener.WorkflowListener;
@@ -11,7 +10,13 @@ import org.springframework.stereotype.Service;
 
 import java.time.Duration;
 import java.time.Instant;
-import java.util.*;
+import java.util.Collection;
+import java.util.Comparator;
+import java.util.LinkedHashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.UUID;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ConcurrentMap;
 import java.util.stream.Collectors;
@@ -478,7 +483,7 @@ public class WorkflowActiveRegistry implements WorkflowListener {
                 .filter(s -> userFilter == null || userFilter.equals(s.userId()))
                 .sorted(Comparator.comparing(WorkflowSnapshot::startTime).reversed())
                 .map(this::injectChunks)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     /** Number of entries currently tracked. Mostly useful for tests + health. */
@@ -595,12 +600,9 @@ public class WorkflowActiveRegistry implements WorkflowListener {
                 .toList();
     }
 
-    private static final String STATUS_RUNNING = "RUNNING";
-    private static final String STATUS_IDLE = "IDLE";
-
     private static WorkerSnapshot buildWorkerSnapshot(String name, List<ChunkSnapshot> entries) {
         ChunkSnapshot running = entries.stream()
-                .filter(c -> STATUS_RUNNING.equals(c.status()))
+                .filter(c -> "RUNNING".equals(c.status()))
                 .findFirst().orElse(null);
 
         ChunkSnapshot lastFinished = entries.stream()
@@ -638,7 +640,7 @@ public class WorkflowActiveRegistry implements WorkflowListener {
                 .max(Comparator.naturalOrder())
                 .orElse(null);
 
-        String status        = running != null ? STATUS_RUNNING : STATUS_IDLE;
+        String status        = running != null ? "RUNNING" : "IDLE";
         Integer currentChunk = running != null ? running.chunkIndex() : null;
         long curProcessed    = running != null ? running.recordsProcessed() : 0L;
         long curTotal        = running != null ? running.recordsTotal()     : 0L;
@@ -678,7 +680,7 @@ public class WorkflowActiveRegistry implements WorkflowListener {
      * {@link WorkerSnapshot} at read time .
      */
     static final class StageWorkerStat {
-        volatile String  status = STATUS_IDLE;
+        volatile String  status = "IDLE";
         volatile Integer currentChunk;
         volatile long    currentRecordsProcessed;
         volatile long    currentRecordsTotal;
@@ -689,7 +691,7 @@ public class WorkflowActiveRegistry implements WorkflowListener {
 
         synchronized void recordEnd(Long durationMs) {
             chunksDone++;
-            status = STATUS_IDLE;
+            status = "IDLE";
             currentChunk = null;
             currentRecordsProcessed = 0L;
             currentRecordsTotal = 0L;
@@ -735,7 +737,7 @@ public class WorkflowActiveRegistry implements WorkflowListener {
                 .computeIfAbsent(corrId, k -> new ConcurrentHashMap<>())
                 .put(e.chunkIndex(), new ChunkSnapshot(
                         e.chunkIndex(),
-                        STATUS_RUNNING,
+                        "RUNNING",
                         0L,
                         e.recordsExpected(),
                         e.workerName(),
@@ -796,11 +798,11 @@ public class WorkflowActiveRegistry implements WorkflowListener {
         if (corrId == null) return;
         ConcurrentMap<String, StageWorkerStat> sources = sourceWorkersByCid.get(corrId);
         if (sources != null) {
-            sources.values().forEach(w -> { w.status = STATUS_IDLE; w.currentChunk = null; });
+            sources.values().forEach(w -> { w.status = "IDLE"; w.currentChunk = null; });
         }
         ConcurrentMap<String, StageWorkerStat> sinks = sinkWorkersByCid.get(corrId);
         if (sinks != null) {
-            sinks.values().forEach(w -> { w.status = STATUS_IDLE; w.currentChunk = null; });
+            sinks.values().forEach(w -> { w.status = "IDLE"; w.currentChunk = null; });
         }
     }
 
@@ -838,9 +840,9 @@ public class WorkflowActiveRegistry implements WorkflowListener {
                                           long nowMs) {
         if (workers == null) return;
         for (StageWorkerStat w : workers.values()) {
-            if (STATUS_RUNNING.equals(w.status)
-                    && w.lastActivity != null
-                    && nowMs - w.lastActivity.toEpochMilli() > STALE_RUNNING_RESET_MS) {
+            if (!"RUNNING".equals(w.status)) continue;
+            if (w.lastActivity == null) continue;
+            if (nowMs - w.lastActivity.toEpochMilli() > STALE_RUNNING_RESET_MS) {
                 w.status = "IDLE";
                 w.currentChunk = null;
                 w.currentRecordsProcessed = 0L;
