@@ -1,16 +1,12 @@
 package fr.inra.oresing.domain.data.deposit.context.column;
 
+import com.google.common.collect.ImmutableList;
 import fr.inra.oresing.domain.ComponentPresenceConstraint;
-import fr.inra.oresing.domain.application.configuration.checker.CheckerDescription;
 import fr.inra.oresing.domain.checker.Multiplicity;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
-
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -31,7 +27,7 @@ class ColumnContextTest {
         @Test
         @DisplayName("constructeur canonique stocke les trois champs")
         void canonicalConstructor() {
-            List<String> headers = List.of("a", "b", "c");
+            ImmutableList<String> headers = ImmutableList.of("a", "b", "c");
             ContextHeader h = new ContextHeader(1, "b", headers);
             assertThat(h.columnIndex()).isEqualTo(1);
             assertThat(h.columnHeader()).isEqualTo("b");
@@ -41,7 +37,7 @@ class ColumnContextTest {
         @Test
         @DisplayName("constructeur secondaire calcule columnIndex via indexOf")
         void secondaryConstructorComputesIndex() {
-            List<String> headers = List.of("x", "y", "z");
+            ImmutableList<String> headers = ImmutableList.of("x", "y", "z");
             ContextHeader h = new ContextHeader("y", headers);
             assertThat(h.columnIndex()).isEqualTo(1);
             assertThat(h.columnHeader()).isEqualTo("y");
@@ -51,15 +47,15 @@ class ColumnContextTest {
         @Test
         @DisplayName("constructeur secondaire : premier élément -> index 0")
         void secondaryConstructorFirstElement() {
-            List<String> headers = List.of("alpha", "beta");
+            ImmutableList<String> headers = ImmutableList.of("alpha", "beta");
             ContextHeader h = new ContextHeader("alpha", headers);
-            assertThat(h.columnIndex()).isZero();
+            assertThat(h.columnIndex()).isEqualTo(0);
         }
 
         @Test
         @DisplayName("constructeur secondaire : dernier élément -> bon index")
         void secondaryConstructorLastElement() {
-            List<String> headers = List.of("a", "b", "c", "d");
+            ImmutableList<String> headers = ImmutableList.of("a", "b", "c", "d");
             ContextHeader h = new ContextHeader("d", headers);
             assertThat(h.columnIndex()).isEqualTo(3);
         }
@@ -67,7 +63,7 @@ class ColumnContextTest {
         @Test
         @DisplayName("constructeur secondaire : colonne absente -> index -1")
         void secondaryConstructorAbsentColumn() {
-            List<String> headers = List.of("a", "b");
+            ImmutableList<String> headers = ImmutableList.of("a", "b");
             ContextHeader h = new ContextHeader("missing", headers);
             assertThat(h.columnIndex()).isEqualTo(-1);
         }
@@ -75,17 +71,17 @@ class ColumnContextTest {
         @Test
         @DisplayName("record equality")
         void equality() {
-            List<String> h = List.of("a", "b");
+            ImmutableList<String> h = ImmutableList.of("a", "b");
             ContextHeader x = new ContextHeader("a", h);
             ContextHeader y = new ContextHeader("a", h);
             assertThat(x).isEqualTo(y);
-            assertThat(x).hasSameHashCodeAs(y);
+            assertThat(x.hashCode()).isEqualTo(y.hashCode());
         }
 
         @Test
         @DisplayName("toString() ne lève pas d'exception")
         void toStringDoesNotThrow() {
-            List<String> h = List.of("col");
+            ImmutableList<String> h = ImmutableList.of("col");
             ContextHeader ctx = new ContextHeader("col", h);
             assertThat(ctx.toString()).isNotNull();
         }
@@ -119,7 +115,7 @@ class ColumnContextTest {
             AdjacentDescription b = new AdjacentDescription("k", "col",
                     ComponentPresenceConstraint.OPTIONAL, Multiplicity.MANY);
             assertThat(a).isEqualTo(b);
-            assertThat(a).hasSameHashCodeAs(b);
+            assertThat(a.hashCode()).isEqualTo(b.hashCode());
         }
 
         @Test
@@ -130,105 +126,6 @@ class ColumnContextTest {
             AdjacentDescription b = new AdjacentDescription("k2", "col",
                     ComponentPresenceConstraint.OPTIONAL, Multiplicity.ONE);
             assertThat(a).isNotEqualTo(b);
-        }
-    }
-
-    // ─────────────────────────────────────────────────────────────────────────
-    //  ReferenceStaticColumnDescription
-    // ─────────────────────────────────────────────────────────────────────────
-
-    @Nested
-    @DisplayName("ReferenceStaticColumnDescription")
-    class ReferenceStaticColumnDescriptionTest {
-
-        @Test
-        @DisplayName("accesseurs du record retournent les valeurs fournies")
-        void accessors() {
-            ReferenceStaticColumnDescription desc = new ReferenceStaticColumnDescription(
-                    ComponentPresenceConstraint.MANDATORY,
-                    Set.of(),
-                    CheckerDescription.NO_CHECKER,
-                    "headerName"
-            );
-            assertThat(desc.presenceConstraint()).isEqualTo(ComponentPresenceConstraint.MANDATORY);
-            assertThat(desc.tags()).isEmpty();
-            assertThat(desc.checker()).isEqualTo(CheckerDescription.NO_CHECKER);
-            assertThat(desc.headerName()).isEqualTo("headerName");
-        }
-    }
-
-    // ─────────────────────────────────────────────────────────────────────────
-    //  ReferenceStaticNotComputedColumnDescription
-    // ─────────────────────────────────────────────────────────────────────────
-
-    @Nested
-    @DisplayName("ReferenceStaticNotComputedColumnDescription")
-    class ReferenceStaticNotComputedColumnDescriptionTest {
-
-        @Test
-        @DisplayName("accesseurs du record retournent les valeurs fournies")
-        void accessors() {
-            ReferenceStaticNotComputedColumnDescription desc = new ReferenceStaticNotComputedColumnDescription(
-                    ComponentPresenceConstraint.OPTIONAL,
-                    Set.of(),
-                    CheckerDescription.NO_CHECKER,
-                    "col_header",
-                    null
-            );
-            assertThat(desc.presenceConstraint()).isEqualTo(ComponentPresenceConstraint.OPTIONAL);
-            assertThat(desc.headerName()).isEqualTo("col_header");
-            assertThat(desc.defaultValue()).isNull();
-        }
-    }
-
-    // ─────────────────────────────────────────────────────────────────────────
-    //  ReferenceStaticComputedColumnDescription
-    // ─────────────────────────────────────────────────────────────────────────
-
-    @Nested
-    @DisplayName("ReferenceStaticComputedColumnDescription")
-    class ReferenceStaticComputedColumnDescriptionTest {
-
-        @Test
-        @DisplayName("accesseurs du record retournent les valeurs fournies")
-        void accessors() {
-            ReferenceStaticComputedColumnDescription desc = new ReferenceStaticComputedColumnDescription(
-                    ComponentPresenceConstraint.OPTIONAL,
-                    Set.of(),
-                    CheckerDescription.NO_CHECKER,
-                    "computed_col",
-                    null
-            );
-            assertThat(desc.presenceConstraint()).isEqualTo(ComponentPresenceConstraint.OPTIONAL);
-            assertThat(desc.headerName()).isEqualTo("computed_col");
-            assertThat(desc.computation()).isNull();
-        }
-    }
-
-    // ─────────────────────────────────────────────────────────────────────────
-    //  ReferenceDynamicColumnDescription
-    // ─────────────────────────────────────────────────────────────────────────
-
-    @Nested
-    @DisplayName("ReferenceDynamicColumnDescription")
-    class ReferenceDynamicColumnDescriptionTest {
-
-        @Test
-        @DisplayName("accesseurs du record retournent les valeurs fournies")
-        void accessors() {
-            ReferenceDynamicColumnDescription desc = new ReferenceDynamicColumnDescription(
-                    ComponentPresenceConstraint.OPTIONAL,
-                    Set.of(),
-                    Map.of("fr", "Dynamique"),
-                    "prefix_",
-                    "refType",
-                    "lookupCol"
-            );
-            assertThat(desc.presenceConstraint()).isEqualTo(ComponentPresenceConstraint.OPTIONAL);
-            assertThat(desc.internationalizationName()).containsEntry("fr", "Dynamique");
-            assertThat(desc.headerPrefix()).isEqualTo("prefix_");
-            assertThat(desc.reference()).isEqualTo("refType");
-            assertThat(desc.referenceColumnToLookForHeader()).isEqualTo("lookupCol");
         }
     }
 }
